--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de medias</title>
-    <link rel="preconnect"href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Josefin+Sans:ital@1&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Agenda de Contatos</title>
+    <link
+        href="https: //fonts.googleapis.com/css2?family= Bungee & família= Belanosima:wght@600 &family = Josefin+Sans:ital@1 & family= Roboto+Mono & family= Roboto:wght@400;700 & display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
-    </head>
+</head>
+
 <body>
-    <div class="container">
+    <div class="continer">
         <header>
-            <img src="./logo.png" alt="capelo e diploma">
-        <h1>Calculadora de medias</h1>
+            <h1>Agenda de Contatos</h1>
         </header>
-        <form id="form-atividade">
-            <input type="text" id="nome-atividade" required placeholder="Nome da atividade" />
-    <input type="number" id="nota-atividade" required placeholder="Nota da atividade" min="0" max="10" />
-            <button type="submit">Adicionar +</button>
+        <form id="form-cadastro">
+            <input type="text" id="nome-completo" required placeholder="Nome" />
+            <input type="number" id="contato" required placeholder="contato" />
+            <button type="submit">Cadastrar</button>
         </form>
+        <p class="sucess-menssage"></p>
         <table cellspacing="0">
             <thead>
                 <tr>
                     <th>
-                        Nome da atividade
+                        Nome dos Cadastrados
                     </th>
-                    <th>Nota da atividade</th>
-                    <th>Aprovado?</th>
+                    <th>
+                        Telefone dos Cadastrados
+                    </th>
+                    <th>Cadastro</th>
                 </tr>
             </thead>
             <tbody>
             </tbody>
-            <tfoot>
-                <tr>
-                    <td>Media final</td>
-                    <td id="media-final-valor">---</td>
-                    <td id="media-final-resultado">---</td>
-                </tr>
-            </tfoot>
         </table>
     </div>
     <script src="./main.js"></script>
